# cRnaFile

./: .gitignore  CMakeLists.txt  README.md
examples/: example1.c
include/: rnaf.h
source/: memory_utils.c  memory_utils.h  rnaf.c  string_utils.c  string_utils.h  utils.c
